tests/snapshots/contract_snapshots__trigger_not_found.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "api",
    "message": "[ERROR_MSG]",
    "hint": "Production webhook 404s usually mean the path is wrong, the workflow is inactive, or n8n has not registered the webhook yet. Check `n8nc workflow show <file>` for the expected URL and re-activate the workflow if needed."
  }
}
