tests/snapshots/contract_snapshots__workflow_new_duplicate.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "validation",
    "message": "[ERROR_MSG]",
    "hint": "Choose a different path or remove the existing file first."
  }
}
