tests/snapshots/contract_snapshots__workflow_show_not_found.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "validation",
    "message": "[ERROR_MSG]"
  }
}
